lang/tests/compile_fail/migrate_on_signer.stderr
error[E0277]: the trait bound `quasar_lang::accounts::Signer: quasar_lang::prelude::Owner` is not satisfied
  --> tests/compile_fail/migrate_on_signer.rs:19:17
   |
19 |     pub target: Migration<Signer, ConfigV2>,
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `quasar_lang::prelude::Owner` is not implemented for `quasar_lang::accounts::Signer`
   |
   = help: the following other types implement trait `quasar_lang::prelude::Owner`:
             ConfigV2
             SystemAccount
   = note: required for `quasar_lang::accounts::Signer` to implement `CheckOwner`
   = note: required for `quasar_lang::accounts::Migration<quasar_lang::accounts::Signer, ConfigV2>` to implement `AccountLoad`
